practice/deployment-strategies/canary/apache-deploy-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apache-deploy-v2
  name: apache-deploy-v2
  namespace: shivang
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canary-deploy
      version: v2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1          # max extra pods during update
      maxUnavailable: 0    # no downtime (0 = zero-downtime)
  template:
    metadata:
      labels:
        app: canary-deploy
        version: v2
    spec:
      containers:
      - image: httpd:latest
        name: my-httpd
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "5m"
            memory: "128Mi"
          limits:
            cpu: "10m"
            memory: "256Mi"
status: {}
