practice/deployment-strategies/canary/nginx-deployment-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-deploy-v1
  name: nginx-deploy-v1
  namespace: shivang
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canary-deploy
      version: v1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1          # max extra pods during update
      maxUnavailable: 0    # no downtime (0 = zero-downtime)
  template:
    metadata:
      labels:
        app: canary-deploy
        version: v1
    spec:
      containers:
      - image: mynginx:v1
        name: my-nginx
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "5m"
            memory: "128Mi"
          limits:
            cpu: "10m"
            memory: "256Mi"
status: {}
