practice/deployment-strategies/canary/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: shivang
spec:
  rules:
   - http:
      paths:
      - backend:
          service:
            name: canary-deploy-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
